work on scalar field

--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -1232,17 +1232,16 @@ Since we showed that $c_b^2:=\frac{\delta p}{\delta \rho}_{\mid \sigma}=1$ we id
 \end{align}
 and we confim $\Gamma$ is a function of the potential only and that indeed $\delta\sigma\propto \delta\varphi$.
 
-
-
-% Expanding up to second order in the fluctuations $\delta\varphi$ around a homogeneous background $\bar{\varphi}(t)$ we have
-% \begin{align}
-%     S_\varphi^{(2)} &= \int d^4x a^4 \Bigg\{
-%     \frac{1}{2a^2}\left[(1-2\Phi)(\delta\varphi')^2 - (1+2\Psi)(\nabla\delta\varphi)^2\right]
-%     - \frac{1}{2} V''(\bar{\varphi}) (\delta\varphi)^2
-%     \nnb
-%     \\
-%     &\quad + \frac{1}{a^2}\left[-\bar{\varphi}'\delta\varphi' \Phi + \bar{\varphi}'\delta\varphi \Psi' \right]
-%     - V'(\bar{\varphi}) \delta\varphi (\Phi - 3\Psi)
-%     \Bigg\}\,.
-% \end{align}
+Finally note that in the comoving gauge $\varphi^I=x^I$ we have
+\begin{align}
+    b=\left(\det(g^{\mu\nu}\partial_\mu\varphi^I\partial_\nu\varphi^J)\right)^{1/2} = \sqrt{\det(g^{ij})} = \frac{1}{a^3}(1+3\Psi)\,.
+\end{align}
+and
+\begin{align}
+    y=-\sqrt{X}= -\frac{\bar{\varphi}'}{a}\left[1 + \left(\frac{\delta\varphi'}{\bar{\varphi}'}-\Phi\right) - \frac{1}{2}\frac{(\nabla\delta\varphi)^2}{(\bar{\varphi}')^2} \right] +\mathcal{O}(3,\mathrm{mix})\,.
+\end{align}
+Therefore the comoving entropy is
+\begin{align}
+    \sigma = \frac{F_y}{b} = a^3(1-3\Psi) y =  -a^2\bar{\varphi}'\left[1 + \left(\frac{\delta\varphi'}{\bar{\varphi}'}-\Phi-3\Psi\right) - \frac{1}{2}\frac{(\nabla\delta\varphi)^2}{(\bar{\varphi}')^2} \right] +\mathcal{O}(3,\mathrm{mix})\,.
+\end{align}
 
