--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -387,6 +387,7 @@ In order to understand non barotropic fluids it is important to write the pressu
 \end{align}
 where we defined $c_s^2=\partial p/\partial \rho\vert_\sigma$ is exactly the as the speed of sound appearing in the phonon Lagrangian defined in Eq.~\eqref{eq:csnonbaro}. In addition to the speed of sound the pressure fluctuation receive contribution from the fluctuation of the entropy mode $\Gamma=\partial p/\partial \sigma\vert_\rho$. 
 Now we can write the continuity and Euler equation.
+Consider the metric in conformal time $ds^2=a^2\left[-(1+2\Phi)d\tau^2+(1-2\Psi)dx^2\right]$.
 Decomposing the energy-momentum tensor as $T^{\mu\nu}=(\rho+P)u^\mu u^\nu+Pg^{\mu\nu}+a^{-2}\Pi^{\mu\nu}$ with $\Pi^{00}=\Pi^{i0}=0$ and $\Pi^{ij}=(\partial_i\partial_j-\tfrac{1}{3}\delta_{ij}\partial^2)\Pi$, we have
 \begin{align}
     \delta\rho^\prime= -3\mathcal{H}(\delta\rho+\delta P) + (\bar{\rho}+\bar{P})\big(3\psi^\prime-\partial_j \,(\delta u^j)\big)\,\\
@@ -398,7 +399,7 @@ Introducing the velocity potential $\delta u^j=\partial_j v$ and passing to Four
     \delta\rho^\prime= -3\mathcal{H}(\delta\rho+\delta P) + (\bar{\rho}+\bar{P})\big(3\psi^\prime + k^2 v\big)\,\\
     v^\prime+ \mathcal{H}v-3\mathcal{H}\frac{\bar{P}^\prime}{\bar{\rho}^\prime}v+\frac{\delta P}{(\bar{\rho}+\bar{P})}+\Phi{\color{red}+\tfrac{2}{3}\Pi}=0\,.
 \end{align}
-and which we can combine in the second order differential equation for the energy density fluctuations
+and which we can combine in the second order differential equation for the energy density fluctuations\todoAC{Check convention Diego before}
 \begin{equation}
  ...   
 \end{equation}
@@ -429,7 +430,13 @@ Moreover
 \begin{equation}
  \Gamma\delta\sigma=-2 V_\phi \delta\phi   
 \end{equation}
-Mi aggiungi il matching per bene qui? pressione e la sua variazione fino alle equazione per $\delta\rho$ poi generalizza a k-essence e k essence che e' essenzialmente k essence + quintessence. A me sembra che $\Gamma$ sia funzione del potenziale ma l'equazione di stato e' non e' solo funzione del potenziale...
+Mi aggiungi il matching per bene qui? pressione e la sua variazione fino alle equazione per $\delta\rho$
+A me sembra che $\Gamma$ sia funzione del potenziale ma l'equazione di stato e' non e' solo funzione del potenziale...\answerAC{Dettagli per 5-ess. in appendix, accorcio e scrivo qui}
+\vspace{8mm}
+
+Poi generalizza a k-essence e k essence che e' essenzialmente k essence + quintessence.\questionAC{Lo faccio}
+ 
+
 
 
 
@@ -483,6 +490,10 @@ S^{\rm{heavy}}_{\rm SK}
 %=========================================
 In this section we collect some useful or additional computations.
 
+%--------------------------------------------
+\subsection{Adiabatic sound speed}
+%------------------------------------------------
+
 The entropy per particle is $\sigma=F_y/b$, imposing it be preserved gives\footnote{Subscripts mean $X_b=\partial_b X_{\mid y}$ and $X_y=\partial_y X_{\mid b}$ i.e. main variables $(b,y)$, unless otherwise stated.}
 \begin{align}
     0=d\sigma = \frac{F_{yy}}{b}dy+\Big(\frac{bF_{by}-F_y}{b^2}\Big)db\quad \Rightarrow\quad \frac{dy}{db}_{\mid\sigma}= \frac{F_y-b F_{yb}}{bF_{yy}}=\frac{y}{b}\frac{p_y}{\rho_y}
@@ -519,6 +530,112 @@ Indeed, using the above expressions
 \end{align}
 
 
+%----------------------------------------------------------------
+\subsection{Matching to scalar field}
+%----------------------------------------------------------------
+
+Consider the metric in Newtonian gauge
+\begin{equation}
+    g_{\mu\nu}=a^2\begin{pmatrix}
+        -(1+2\Phi) & 0 \\
+        0 & (1-2\Psi)\delta_{ij}
+    \end{pmatrix}\, \quad \Rightarrow \quad \sqrt{-g}=a^4(1+\Phi-3\Psi)\,.
+\end{equation}
+The action for the scalar field $\varphi$ with potential $V(\varphi)$ is
+\begin{equation}
+    S_\varphi = \int d^4x \sqrt{-g} \left[-\frac{1}{2} g^{\mu\nu}\partial_\mu\varphi \partial_\nu\varphi - V(\varphi)\right]\,, \quad X:= -g^{\mu\nu}\partial_\mu\varphi \partial_\nu\varphi\,.
+\end{equation}
+The energy-momentum tensor is
+{\small
+\begin{align}
+\begin{aligned}
+    T_{\mu\nu}&=-\frac{2}{\sqrt{-g}}\frac{\partial \left(\sqrt{-g}\mathcal{L}\right)}{\partial g^{\mu\nu}}
+    = -\frac{2}{\sqrt{-g}}\left(\sqrt{-g}\frac{\partial \mathcal{L}}{\partial g^{\mu\nu}}-\frac{1}{2}\sqrt{-g}g_{\mu\nu}\mathcal{L}\right)
+    \\
+     &= \partial_\mu\varphi \partial_\nu\varphi + g_{\mu\nu}\left[-\frac{1}{2}g^{\alpha\beta}\partial_\alpha\varphi \partial_\beta\varphi - V(\varphi)\right]\\
+    &= \frac{\partial_\mu\varphi}{\sqrt{-g^{\alpha\beta}\partial_\alpha\varphi \partial_\beta\varphi}} \frac{\partial_\nu\varphi}{\sqrt{-g^{\alpha\beta}\partial_\alpha\varphi \partial_\beta\varphi}} \left(-g^{\alpha\beta}\partial_\alpha\varphi \partial_\beta\varphi\right) + g_{\mu\nu}\left[\frac{1}{2}\left(-g^{\alpha\beta}\partial_\alpha\varphi \partial_\beta\varphi\right) - V(\varphi)\right]\,.
+\end{aligned}
+\end{align}
+}
+We expand around a homogeneous background $\bar{\varphi}(\tau)$ as $\varphi(\tau,\vec{x})=\bar{\varphi}(\tau)+\delta\varphi(\tau,\vec{x})$.
+Dropping mixed and second order in the metric perturbations we have 
+\begin{align}
+\begin{aligned}
+    X&= -g^{\mu\nu}\partial_\mu\varphi \partial_\nu\varphi
+    = \frac{1}{a^2}(1-2\Phi)(\bar{\varphi}'+\delta\varphi')^2 - \frac{1}{a^2}(1+2\Psi)(\nabla\delta\varphi)^2\\
+    &\simeq \frac{1}{a^2}(\bar{\varphi}')^2+ \frac{2}{a^2}(\bar{\varphi}'\delta\varphi'-\Phi (\bar{\varphi}')^2) + \frac{1}{a^2}\left[(\delta\varphi')^2-(\nabla\delta\varphi)^2\right]\\
+    &\simeq \frac{1}{a^2}(\bar{\varphi}')^2\left[1+ 2\left(\frac{\delta\varphi'}{\bar{\varphi}'}-\Phi\right) + \left(\frac{\delta\varphi'}{\bar{\varphi}'}\right)^2 - \frac{(\nabla\delta\varphi)^2}{(\bar{\varphi}')^2}\right]+\mathcal{O}(3,\mathrm{mix})\,.
+\end{aligned}
+\end{align}
+Then, again dropping mixed and secnd order in the metric perturbations, we have
+\begin{align}
+   X^{-1/2}&\simeq \frac{a}{\bar{\varphi}'}\left[1 - \left(\frac{\delta\varphi'}{\bar{\varphi}'}-\Phi\right) +\left(\frac{\delta\varphi'}{\bar{\varphi}'}\right)^2 + \frac{1}{2}\frac{(\nabla\delta\varphi)^2}{(\bar{\varphi}')^2} \right] +\mathcal{O}(3,\mathrm{mix})\,.
+\end{align}
+%
+Matching to a perfect fluid $T_{\mu\nu}=(\rho+p)u_\mu u_\nu + p g_{\mu\nu}$ we identify the velocity field as
+\begin{align}
+\begin{aligned}
+    u_\mu &= \frac{\partial_\mu\varphi}{\sqrt{-g^{\alpha\beta}\partial_\alpha\varphi \partial_\beta\varphi}} =  X^{-1/2}\left(\bar{\varphi}^\prime+\delta\varphi',\, \nabla\delta\varphi\right)\\
+    &\simeq \frac{a}{\bar{\varphi}'}\left[1 - \left(\frac{\delta\varphi'}{\bar{\varphi}'}-\Phi\right) +\left(\frac{\delta\varphi'}{\bar{\varphi}'}\right)^2 + \frac{1}{2}\frac{(\nabla\delta\varphi)^2}{(\bar{\varphi}')^2} \right]\left(\bar{\varphi}^\prime+\delta\varphi',\, \nabla\delta\varphi\right)\\
+    &\simeq a\left(1+ \Phi,\, \frac{\nabla\delta\varphi}{\bar{\varphi}'}\right) + \mathcal{O}(2)\,.
+\end{aligned}
+\end{align}
+Expanding $V(\varphi)=V(\bar{\varphi}) + V_{\varphi}(\bar{\varphi})\delta\varphi + \frac{1}{2}V_{\varphi\varphi}(\bar{\varphi})(\delta\varphi)^2$ we identify the \textbf{energy density}
+\begin{align}
+\begin{aligned}
+    \rho &= \frac{1}{2}X + V(\varphi) = \frac{1}{2a^2}(1-2\Phi)(\varphi')^2 + \frac{1}{2a^2}(1+2\Psi)(\nabla\varphi)^2 + V(\varphi)\\
+    &\simeq \frac{1}{2}\frac{a}{\bar{\varphi}'}\left[1 - \left(\frac{\delta\varphi'}{\bar{\varphi}'}-\Phi\right) +\left(\frac{\delta\varphi'}{\bar{\varphi}'}\right)^2 + \frac{1}{2}\frac{(\nabla\delta\varphi)^2}{(\bar{\varphi}')^2} \right]\\
+    &\quad+ V(\bar{\varphi}) + V_{\varphi}(\bar{\varphi})\delta\varphi + \frac{1}{2}V_{\varphi\varphi}(\bar{\varphi})(\delta\varphi)^2 +\mathcal{O}(3,\mathrm{mix})\,.
+\end{aligned}
+\end{align}
+and the \textbf{pressure} 
+\begin{align}
+\begin{aligned}
+    p &= \frac{1}{2}X - V(\varphi) = \frac{1}{2a^2}(1-2\Phi)(\varphi')^2 + \frac{1}{2a^2}(1+2\Psi)(\nabla\varphi)^2 - V(\varphi)\\
+    &\simeq \frac{1}{2}\frac{a}{\bar{\varphi}'}\left[1 - \left(\frac{\delta\varphi'}{\bar{\varphi}'}-\Phi\right) +\left(\frac{\delta\varphi'}{\bar{\varphi}'}\right)^2 + \frac{1}{2}\frac{(\nabla\delta\varphi)^2}{(\bar{\varphi}')^2} \right]\\
+    &\quad- V(\bar{\varphi}) - V_{\varphi}(\bar{\varphi})\delta\varphi - \frac{1}{2}V_{\varphi\varphi}(\bar{\varphi})(\delta\varphi)^2 +\mathcal{O}(3,\mathrm{mix})\,.
+\end{aligned}
+\end{align}
+Finally we have 
+\begin{align}
+    p=\rho-2V(\varphi) \quad \Rightarrow \quad \delta p = \delta\rho - 2 V_{\varphi}(\bar{\varphi})\delta\varphi\,.
+\end{align}
+Since we showed that $c_b^2:=\frac{\delta p}{\delta \rho}_{\mid \sigma}=1$ we identify the \textbf{non-adiabatic pressure perturbations} of the field
+\begin{align}
+    \delta p_{\text{nad}} =\frac{\delta p}{\delta \sigma}_{\mid \rho}\delta\sigma= \delta p - c_b^2 \delta \rho = - 2 V_{\varphi}(\bar{\varphi})\delta\varphi\,\quad \Rightarrow\quad \Gamma:= \frac{\delta p}{\delta \sigma}_{\mid \rho}\delta\sigma = - 2 V_{\varphi}(\bar{\varphi})\delta\varphi\,.
+\end{align}
+and we confim $\Gamma$ is a function of the potential only and that indeed $\delta\sigma\propto \delta\varphi$.
+
+Finally note that in the comoving gauge $\varphi^I=x^I$ we have
+\begin{align}
+    b=\left(\det(g^{\mu\nu}\partial_\mu\varphi^I\partial_\nu\varphi^J)\right)^{1/2} = \sqrt{\det(g^{ij})} = \frac{1}{a^3}(1+3\Psi)\,.
+\end{align}
+and
+\begin{align}
+    y=-\sqrt{X}= -\frac{\bar{\varphi}'}{a}\left[1 + \left(\frac{\delta\varphi'}{\bar{\varphi}'}-\Phi\right) - \frac{1}{2}\frac{(\nabla\delta\varphi)^2}{(\bar{\varphi}')^2} \right] +\mathcal{O}(3,\mathrm{mix})\,.
+\end{align}
+Therefore the \textbf{comoving entropy for the scalar field} is\todoAC{Formula $F_y/b$ does not account for $V$..}
+\begin{align}
+    \sigma = \frac{F_y}{b} = a^3(1-3\Psi) y =  -a^2\bar{\varphi}'\left[1 + \left(\frac{\delta\varphi'}{\bar{\varphi}'}-\Phi-3\Psi\right) - \frac{1}{2}\frac{(\nabla\delta\varphi)^2}{(\bar{\varphi}')^2} \right] +\mathcal{O}(3,\mathrm{mix})\,.
+\end{align}
+
+Finally the \textbf{equation of state}, upon inverting $\sigma$ to get $\varphi$, reads
+\begin{align}
+    p=\rho-2V(\varphi) \sim \rho +\mathbf{f}(\sigma)\,,
+\end{align}
+confirming it is not a function of the potential only.
+
+
+
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \bibliography{bib.bib}
 
 \end{document}
+
