--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -391,18 +391,20 @@ Consider the metric in conformal time $ds^2=a^2\left[-(1+2\Phi)d\tau^2+(1-2\Psi)
 Decomposing the energy-momentum tensor as $T^{\mu\nu}=(\rho+P)u^\mu u^\nu+Pg^{\mu\nu}+a^{-2}\Pi^{\mu\nu}$ with $\Pi^{00}=\Pi^{i0}=0$ and $\Pi^{ij}=(\partial_i\partial_j-\tfrac{1}{3}\delta_{ij}\partial^2)\Pi$, we have
 \begin{align}
     \delta\rho^\prime= -3\mathcal{H}(\delta\rho+\delta P) + (\bar{\rho}+\bar{P})\big(3\psi^\prime-\partial_j \,(\delta u^j)\big)\,\\
-    (\delta u^j)^\prime+ \mathcal{H}(\delta u^j)-3\mathcal{H}\frac{\bar{P}^\prime}{\bar{\rho}^\prime}(\delta u^j)+\frac{\partial_j\delta P}{(\bar{\rho}+\bar{P})}+\partial_j\Phi{\color{red}+\partial_\ell \Pi^{\ell j}}=0\,.
+    (\delta u^j)^\prime+ \mathcal{H}(\delta u^j)-3\mathcal{H}\frac{\bar{P}^\prime}{\bar{\rho}^\prime}(\delta u^j)+\frac{\partial_j\delta P}{(\bar{\rho}+\bar{P})}+\partial_j\Phi{\color{red}+\frac{\partial_\ell \Pi^{\ell j}}{(\bar{\rho}+\bar{P})}}=0\,.
 \end{align}
 where we write $u^\mu=\frac{1}{a}(1-\Phi, \delta u^j)$. \todotag{Check convention with Diego}
-Introducing the velocity potential $\delta u^j=\partial_j v$ and passing to Fourier space the latter reads
+Introducing the velocity potential $\delta u^j=\partial_j v$ so that $\partial_j\delta u^j=-k^2 v$, and defining the overdensity $\delta:=\delta\rho/\bar{\rho}$ we rewrite
 \begin{align}
-    \delta\rho^\prime= -3\mathcal{H}(\delta\rho+\delta P) + (\bar{\rho}+\bar{P})\big(3\psi^\prime + k^2 v\big)\,\\
-    v^\prime+ \mathcal{H}v-3\mathcal{H}\frac{\bar{P}^\prime}{\bar{\rho}^\prime}v+\frac{\delta P}{(\bar{\rho}+\bar{P})}+\Phi{\color{red}+\tfrac{2}{3}\Pi}=0\,.
+    &\delta^\prime= 3\mathcal{H}\left(\frac{\bar{P}}{\bar{\rho}}-\frac{\delta P}{\delta\rho}\right)\delta + \left(1+\frac{\bar{P}}{\bar{\rho}}\right)3\psi^\prime + \left(1+\frac{\bar{P}}{\bar{\rho}}\right)k^2 v\,\\
+    &v^\prime+ \mathcal{H}v-3\mathcal{H}\frac{\bar{P}^\prime}{\bar{\rho}^\prime}v+\frac{\delta P}{(\bar{\rho}+\bar{P})}+\Phi\,\,{\color{red}-\frac{2}{3}\frac{k^2\,\Pi}{(\bar{\rho}+\bar{P})}}=0\,.
 \end{align}
-and which we can combine in the second order differential equation for the energy density fluctuations\todoAC{Check convention Diego before}
-\begin{equation}
- ...   
-\end{equation}
+These are combined into a 2nd order equation for overdensities
+\begin{align}
+\begin{aligned}
+    fjhrh
+\end{aligned}
+\end{align}
 Since the entropy is conserved along the flow $\dot{\delta y}=0$\questionAC{Mean $\dot{\delta \sigma}=0$? } we can write the equation in comoving gauge $(\delta p=0)$ and eliminate the non-propagating entropy fluctuation to get an expression for the sound speed similar to the one in 2.34. 
 
 
