--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -686,11 +686,11 @@ and since also $b=\det(\partial_\mu\phi^I\partial_\nu\phi^J g^{\mu\nu})^{1/2}$ i
 \end{align}
 In particular we see that $\delta\sigma\propto \delta\varphi$ as in the quintessence case.
 
-Finally we compute $c_b^2= \frac{\partial p}{\partial \rho}_{\mid \sigma}$ using the general formula in the previous sections, and in turn identify the non-adiabatic pressure perturbations $\delta p_{\text{nad}} = \frac{\partial p}{\partial \sigma}_{\mid \rho}\delta\sigma$.\todotag{Do it}
-We have $F(y,b)=P(X,\varphi)$ so that
+Finally we compute $c_b^2= \frac{\partial p}{\partial \rho}_{\mid \sigma}$ using the general formula in the previous sections, and in turn identify the non-adiabatic pressure perturbations $\delta p_{\text{nad}} = \frac{\partial p}{\partial \sigma}_{\mid \rho}\delta\sigma$.
+We have $F(y,b)=P(X,\varphi)$ and $dX=-2y\,dy$ so that
 \begin{align}
 \begin{aligned}
-    c_b^2&=\frac{-b^2F_{bb} F_{yy}+(F_y-bF_{yb})^2}{F_{yy}\,(yF_y-bF_b)}= \frac{(P_X)^2}{(P_X)^2+2XP_XP_{XX}}
+    c_b^2&\equiv \frac{-b^2F_{bb} F_{yy}+(F_y-bF_{yb})^2}{F_{yy}\,(yF_y-bF_b)}= \frac{(P_X)^2}{(P_X)^2+2XP_XP_{XX}}
 \end{aligned}
 \end{align}
 Comparing to \eqref{eq:energy_density_pressure_k_essence} above we find
@@ -702,8 +702,11 @@ Comparing to \eqref{eq:energy_density_pressure_k_essence} above we find
 \end{align}
 we identify the \textbf{non-adiabatic pressure perturbations} of the k-essence field
 \begin{align}
-    \delta p_{\text{nad}} =\frac{\partial p}{\partial \sigma}_{\mid \rho}\delta\sigma
-    = \left(P_\varphi - \frac{P_X\Big(2XP_{X\varphi}-P_\varphi)}{P_X+2XP_{XX}}\right)\delta\varphi\,\quad \Rightarrow\quad \Gamma:= \frac{\partial p}{\partial \sigma}_{\mid \rho}= \left(P_\varphi - \frac{P_X\Big(2XP_{X\varphi}-P_\varphi)}{P_X+2XP_{XX}}\right)\frac{\delta\varphi}{\delta \sigma_{\mid \rho}}\,.
+\begin{aligned}
+    \delta p_{\text{nad}} &=\frac{\partial p}{\partial \sigma}_{\mid \rho}\delta\sigma
+    = \left(P_\varphi - \frac{P_X\Big(2XP_{X\varphi}-P_\varphi)}{P_X+2XP_{XX}}\right)\delta\varphi\\
+    & \Rightarrow\quad \Gamma:= \frac{\partial p}{\partial \sigma}_{\mid \rho}= \left(P_\varphi - \frac{P_X\Big(2XP_{X\varphi}-P_\varphi)}{P_X+2XP_{XX}}\right)\frac{\delta\varphi}{\delta \sigma_{\mid \rho}}\,.
+\end{aligned}
 \end{align}
 
 
