--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -447,13 +447,10 @@ Mi aggiungi il matching per bene qui? pressione e la sua variazione fino alle eq
 A me sembra che $\Gamma$ sia funzione del potenziale ma l'equazione di stato e' non e' solo funzione del potenziale...\answerAC{Dettagli per 5-ess. in appendix, accorcio e scrivo qui}
 \vspace{8mm}
 
-Poi generalizza a k-essence e k essence che e' essenzialmente k essence + quintessence.\questionAC{Lo faccio}
+
  
-
-
-
-
-\paragraph{k-essence}
+\paragraph{k-essence} \answerAC{See appendix}
+Next we extend to k-essence...
 
 \paragraph{generalized k-essence}
 
