--- a/diego/bib.bib
+++ b/diego/bib.bib
@@ -36,6 +36,19 @@
     pages = "025034",
     year = "2016"
 }
+@article{Hu:1998kj,
+    author = "Hu, Wayne",
+    title = "{Structure formation with generalized dark matter}",
+    eprint = "astro-ph/9801234",
+    archivePrefix = "arXiv",
+    reportNumber = "IASSNS-AST-98-5",
+    doi = "10.1086/306274",
+    journal = "Astrophys. J.",
+    volume = "506",
+    pages = "485--494",
+    year = "1998"
+}
+
 @article{Crossley:2015evo,
     author = "Crossley, Michael and Glorioso, Paolo and Liu, Hong",
     title = "{Effective field theory of dissipative fluids}",
