--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -202,21 +202,29 @@ Via Celoria 16, 20133 Milan, Italy}
 %%%%%%%%%%%%% FRONT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Introduction}
-Which fluid allows for accelerated expansion? Assuming a single fluid dominates the energy density of the Universe we can relate the acceleration to its equation of state 
+Which fluid allows for accelerated expansion? Assuming a single fluid dominates the energy density of the Universe we can relate the acceleratio of the universe to the equation of state of the fluid that drives it
 \begin{equation}
     \frac{\ddot{a}}{a}=-\frac{4\pi G_N\rho}{3}(1+3w)\,,
 \end{equation}
-where $w=p/\rho$ is the equation of stare. This equation tells us the well known thing that having accelerated expansion implies $w<-1/3$. We also need to check that the accelerating background is stable which amounts to exclude the presence of instabilities. 
+where $w=p/\rho$ is the equation of state of the so-called dark energy. This equation tells us the well known thing that having accelerated expansion implies $w<-1/3$. We also need to check that the accelerating background is stable which amounts to exclude the presence of  instabilities in the fluctuations around it. 
+
+Moreover, given the little we know about the nature of dark matter we might want to look for a overarching framework describing the behavior of both dark matter and dark energy in terms of the properties that control their interaction with Einstein gravity. This exercise has of course also phenomenological relevance because through their gravitational imprints in the large scale structure of the Universe we could be able to observe the properties of these misterious fluids.  
+
+Very much in the spirit of Ref.~\cite{Hu:1998kj} we would like to be guided by symmetries to construct this general fluid. Contrary to older approaches we will consistently make use of the lagrangian effective field theory framework to describe fluids. 
+
+
+
+
 
 
 %==============================================
-\section{Fluid EFTs}
+\section{Dark Energy as a single fluid}
 %=============================================
 Here we summarize some key results about fluid in the literature.
 
 
 %---------------------------------------------------------
-\subsection{Barotropic perfect fluid}
+\subsection{Barotropic perfect fluid can't be dark energy}
 %-------------------------------------------------------
 A relativistic barotropic perfect fluid is described by three scalar fields $\phi^I(x)$ with $I=1,2,3$ which label the fluid elements~\cite{Dubovsky:2005xd}. The lagrangian should be invariant under volume-preserving diffeos
 \begin{equation}
@@ -443,20 +451,15 @@ Moreover
 \begin{equation}
  \Gamma\delta\sigma=-2 V_\phi \delta\phi   
 \end{equation}
-Mi aggiungi il matching per bene qui? pressione e la sua variazione fino alle equazione per $\delta\rho$
-A me sembra che $\Gamma$ sia funzione del potenziale ma l'equazione di stato e' non e' solo funzione del potenziale...\answerAC{Dettagli per 5-ess. in appendix, accorcio e scrivo qui}
-\vspace{8mm}
-
-
  
 \paragraph{k-essence} \answerAC{See appendix}
 Next we extend to k-essence...
 
 \paragraph{generalized k-essence}
 
-\section{Adding dark matter and LSS phenomenology}
+\section{Adding dark matter and LSS phenomenology (next in line)}
 
-\section{Introducing bulk viscosity}
+\section{Introducing bulk viscosity (to be continued)}
 The simple example one could think of to construct a dissipative system is to start with two scalar fluids in the UV
 \begin{equation}
 S=\int d^4x\left[\frac{1}{2}(\partial\phi)^2+\frac{1}{2}(\partial\chi)^2+\frac{m_\chi^2}{2}\chi^2+ y \chi \psi^2+ M_\psi\psi^2+ \epsilon\partial\phi \partial\chi\right]    
