Updates from Overleaf

--- a/diego/nota_diego.tex
+++ b/diego/nota_diego.tex
@@ -657,8 +657,8 @@ The energy-momentum tensor is
     T_{\mu\nu}&=-\frac{2}{\sqrt{-g}}\frac{\partial \left(\sqrt{-g}\mathcal{L}\right)}{\partial g^{\mu\nu}}
     = -\frac{2}{\sqrt{-g}}\left(\sqrt{-g}\frac{\partial \mathcal{L}}{\partial g^{\mu\nu}}-\frac{1}{2}\sqrt{-g}g_{\mu\nu}\mathcal{L}\right)
     \\[4pt]
-     &= P_X \partial_\mu\varphi \partial_\nu\varphi + g_{\mu\nu} P(X,\varphi)
-     = u_\mu u_\nu X P_X + g_{\mu\nu} P(X,\varphi)\,.
+     &= 2P_X \partial_\mu\varphi \partial_\nu\varphi + g_{\mu\nu} P(X,\varphi)
+     = u_\mu u_\nu 2X P_X + g_{\mu\nu} P(X,\varphi)\,.
 \end{aligned}
 \end{align}
 The velocity field is $u_\mu = \partial_\mu\varphi/\sqrt{X}$ as in the quintessence case, and it enjoys the same expansion \eqref{eq:velocity_field_expansion}.
