--- a/andrea_clini/body/brainstorming.tex
+++ b/andrea_clini/body/brainstorming.tex
@@ -603,10 +603,12 @@ We have
 \end{align}
 We have
 \begin{align}
-    \text{tr}(\epsilon) &= - h^{ii} + 2 (\eta-h)^{\mu i} \partial_\mu \pi^i + \partial_\mu \pi^i \eta^{\mu\nu} \partial_\nu \pi^i,
-    \\
-    \text{tr}(\epsilon)^2&= (h^{ii})^2 - 4 h^{ii} \partial_j \pi^j + 4 (\partial_i \pi^i)^2\,,
-    \\
+    \text{tr}(\epsilon) &= - h^{ii} + 2 (\eta-h)^{\mu i} \partial_\mu \pi^i + \partial_\mu \pi^i \eta^{\mu\nu} \partial_\nu \pi^i
+    \\[3pt]
+    &= - h^{ii} + 2 (\partial_j \pi^j) -2 h^{0 i} \dot{\pi}^i -2h^{ij}\partial_j\pi^i- (\dot{\pi}^i)^2 + \partial_j \pi^i \partial_j \pi^i
+    \\[3pt]
+    \text{tr}(\epsilon)^2&= (h^{ii})^2 - 4 h^{ii} (\partial_j \pi^j) + 4 (\partial_j \pi^j)^2\,,
+    \\[3pt]
     \text{tr}(\epsilon^2) &= h^{ij} h^{ji} - 4 h^{ij} \partial_i\pi^j + 2 \partial_i\pi^j\partial_j\pi^i + 2 \partial_j\pi^i \partial_j \pi^i\,.
 \end{align}
 Therefore using
@@ -617,47 +619,46 @@ Therefore using
 \end{align}
 we have
 \begin{align}
-    \frac{a^6}{\lambda^6}B&= 1 - h^{ii} + 2 (\eta-h)^{\mu i} \partial_\mu \pi^i + \partial_\mu \pi^i \eta^{\mu\nu} \partial_\nu \pi^i\\
+    \frac{a^6}{\lambda^6}B&= \det (\mathbb{I}+\epsilon) \\
+    &= 1 + \Big[- h^{ii} + 2 (\partial_j \pi^j) -2 h^{0 i} \dot{\pi}^i \redcancel{-2h^{ij}\partial_j\pi^i}- (\dot{\pi}^i)^2 + \bluecancel{\partial_j \pi^i \partial_j \pi^i}\Big]\\
     &\quad +\frac{1}{2}\left[
-        +(h^{ii})^2 - 4 h^{ii} \partial_j \pi^j + 4 (\partial_i \pi^i)^2
-        -h^{ij} h^{ji} + 4 h^{ij} \partial_i\pi^j - 2 \partial_i\pi^j\partial_j\pi^i - 2 \partial_j\pi^i \partial_j \pi^i
+        +(h^{ii})^2 - 4 h^{ii} (\partial_j \pi^j) + 4 (\partial_j \pi^j)^2
+        -h^{ij} h^{ji} \redcancel{+ 4 h^{ij} \partial_i\pi^j} - 2 \partial_i\pi^j\partial_j\pi^i \bluecancel{- 2 \partial_j\pi^i \partial_j \pi^i}
     \right]
     \\
-    &=1  + 2 (\partial_j\pi^j)- h^{ii} -(\dot{\pi}^j)^2 + 3(\partial_j\pi^j)^2 - \partial_i\pi^j\partial_j\pi^i - \partial_j\pi^i\partial_j \pi^i\\
-    &+\tfrac12 \Big((h^{ii})^2-h^{ij} h^{ji}\Big)-2h^{0 i} \,\,\dot{\pi}^i -2h^{ii}(\partial_j\pi^j)
+    & = 1 + \Big[ 2 (\partial_j \pi^j) - h^{ii}\Big] + \Big[ -2 h^{0 i} \dot{\pi}^i - 2 h^{ii} (\partial_j \pi^j) - (\dot{\pi}^i)^2 + 2 (\partial_j \pi^j)^2
+          -  \partial_i\pi^j\partial_j\pi^i\Big] +\tfrac12 \Big((h^{ii})^2 -h^{ij} h^{ji}\Big)\,.
 \end{align}
-and
+Then 
+{\small
 \begin{align}
     \frac{a^3}{\lambda^3}B^{1/2}
-    =&1  +  (\partial_j\pi^j)- \tfrac12 h^{ii} -\tfrac12 (\dot{\pi}^j)^2 + \tfrac32(\partial_j\pi^j)^2 - \tfrac12 \partial_i\pi^j\partial_j\pi^i - \tfrac12 \partial_j\pi^i\partial_j \pi^i\\
-    &+\tfrac14 \Big((h^{ii})^2-h^{ij} h^{ji}\Big)-h^{0 i} \,\,\dot{\pi}^i -h^{ii}(\partial_j\pi^j)-\tfrac18\left[ (\partial_j\pi^j) -h^{ii}\right]^2\\
-    =&1  +  (\partial_j\pi^j)- \tfrac12 h^{ii} -\tfrac12 (\dot{\pi}^j)^2 + \tfrac{11}{8}(\partial_j\pi^j)^2 - \tfrac12 \partial_i\pi^j\partial_j\pi^i - \tfrac12 \partial_j\pi^i\partial_j \pi^i\\
-    &+\tfrac14 \Big(\tfrac12 (h^{ii})^2-h^{ij} h^{ji}\Big)-h^{0 i} \,\,\dot{\pi}^i -\tfrac34 h^{ii}(\partial_j\pi^j)
-\end{align}
-
-
-
-
-
-Just to double check
-\begin{align}
-    \frac{a^3}{\lambda^3}b=& 1 - \tfrac12 h^{ii} +  (\eta-h)^{\mu i} \partial_\mu \pi^i + \tfrac12 \partial_\mu \pi^i \eta^{\mu\nu} \partial_\nu \pi^i\\
-    & +\frac{1}{8}\left[
-        +(h^{ii})^2 - 4 h^{ii} \partial_j \pi^j + 4 (\partial_i \pi^i)^2
-        -2h^{ij} h^{ji} + 8 h^{ij} \partial_i\pi^j - 4 \partial_i\pi^j\partial_j\pi^i - 4 \partial_j\pi^i \partial_j \pi^i
-    \right]
+    & = 1 + \Big[ (\partial_j \pi^j) - \tfrac12 h^{ii}\Big] -\tfrac18 \left[ 2 (\partial_j \pi^j) - h^{ii}\right]^2\\
+    &\quad + \Big[ - h^{0 i} \dot{\pi}^i -  h^{ii} (\partial_j \pi^j) - \tfrac12 (\dot{\pi}^i)^2 +  (\partial_j \pi^j)^2 -\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big] +\tfrac14 \Big((h^{ii})^2 -h^{ij} h^{ji}\Big)
     \\
+    &= 1 + \Big[ (\partial_j \pi^j) - \tfrac12 h^{ii}\Big] + \Big[ - h^{0 i} \dot{\pi}^i - \tfrac12  h^{ii} (\partial_j \pi^j) - \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 -\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big] +\tfrac18 \Big((h^{ii})^2 -2h^{ij} h^{ji}\Big)
 \end{align}
-and finally
+}
+Just to double check 
+{\small
 \begin{align}
-    \left(\frac{a^3}{\lambda^3}b\right)^{-1}&= 1 + \tfrac12 h^{ii} -  (\eta-h)^{\mu i} \partial_\mu \pi^i - \tfrac12 \partial_\mu \pi^i \eta^{\mu\nu} \partial_\nu \pi^i\\
-    &\quad +\frac{1}{8}\left[
-        +(h^{ii})^2 - 4 h^{ii} \partial_j \pi^j + 4 (\partial_i \pi^i)^2
-        +2h^{ij} h^{ji} - 8 h^{ij} \partial_i\pi^j + 4 \partial_i\pi^j\partial_j\pi^i + 4 \partial_j\pi^i \partial_j \pi^i
-    \right]
+    \frac{a^3}{\lambda^3}B^{1/2} &= \det(\mathbb{I}+\epsilon)^{1/2}\\
+    &= 1 + \frac12 \Big[- h^{ii} + 2 (\partial_j \pi^j) -2 h^{0 i} \dot{\pi}^i \bluecancel{-2h^{ij}\partial_j\pi^i}- (\dot{\pi}^i)^2 + \redcancel{\partial_j \pi^i \partial_j \pi^i}\Big] \\
+    &\quad + \frac18 \left[(h^{ii})^2 - 4 h^{ii} (\partial_j \pi^j) + 4 (\partial_j \pi^j)^2 -2h^{ij} h^{ji} + \bluecancel{8h^{ij} \partial_i\pi^j} - 4 \partial_i\pi^j\partial_j\pi^i \redcancel{-4 \partial_j\pi^i \partial_j \pi^i}\right]
     \\
+    &= 1 + \Big[ (\partial_j \pi^j) - \tfrac12 h^{ii}\Big]  +\tfrac18 \Big((h^{ii})^2 -2h^{ij} h^{ji}\Big)
+    +\Big[-h^{0 i} \dot{\pi}^i-\tfrac12  h^{ii} (\partial_j \pi^j)- \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 -\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\,.
 \end{align}
-
+}
+Finally we have
+{\small
+\begin{align}
+    \frac{\lambda^3}{a^3}B^{-\tfrac12}
+    &= 1 - \Big[ (\partial_j \pi^j) - \tfrac12 h^{ii}\Big] - \Big[ - h^{0 i} \dot{\pi}^i - \tfrac12  h^{ii} (\partial_j \pi^j) - \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 -\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\\
+    &\quad  -\tfrac18 \Big((h^{ii})^2 -2h^{ij} h^{ji}\Big) + \Big[ (\partial_j \pi^j) - \tfrac12 h^{ii}\Big] ^2\\
+    &= 1 + \Big[ \tfrac12 h^{ii} -(\partial_j \pi^j)\Big] + \Big[ h^{0 i} \dot{\pi}^i + \tfrac12  h^{ii} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big] +\tfrac18 \Big((h^{ii})^2 +2h^{ij} h^{ji}\Big) 
+\end{align}
+}
 
 
 %------------------------------------------------------
