--- a/andrea_clini/other/my_preamble.tex
+++ b/andrea_clini/other/my_preamble.tex
@@ -336,6 +336,7 @@
 \newcommand{\bluecancel}[1]{\renewcommand{\CancelColor}{\color{blue}}\cancel{#1}}
 \newcommand{\greencancel}[1]{\renewcommand{\CancelColor}{\color{green}}\cancel{#1}}
 \newcommand{\graycancel}[1]{\renewcommand{\CancelColor}{\color{gray}}\cancel{#1}}
+\newcommand{\purplecancel}[1]{\renewcommand{\CancelColor}{\color{purple}}\cancel{#1}}
 
 %--------------- Paper specific new math commands (change each time)-------------------
 \DeclareMathOperator{\pt}{s} % proper time
