--- a/andrea_clini/body/brainstorming.tex
+++ b/andrea_clini/body/brainstorming.tex
@@ -598,6 +598,11 @@ The fluids variables are written for simplicity with a rescaling factor $\gamma$
 \begin{align}
     \phi^0=\gamma\Big(\tau+\pi^0\Big), \quad \phi^i=\lambda\Big(x^i+\pi^i\Big),
 \end{align}
+and the invariants are
+\begin{align}
+    b=\sqrt{\det B}\quad \text{for}\quad
+    B^{ij}= g^{\mu\nu} \partial_\mu \phi^i \partial_\nu \phi^j, \quad y= u^\mu \partial_\mu \phi^0\,.
+\end{align}
 Next we expand the invariants $B$ and $y$ up to quadratic order
 We have
 \begin{align}
