Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -361,11 +361,11 @@ Explicitly we can write the lagrangian at quadratic order in the fluctuation aro
 \begin{equation}
 S_2=\int d^4xd^4x\sqrt{-g}\left(\frac{p+\rho}{2}\right)\left[\dot\pi^2-\mathcal{C}_s^2(\nabla\pi)^2+2\mathcal{M}\dot{\pi}_0 (\nabla\!\!\cdot\!\pi)+\mathcal{A} \dot{\pi}_0^2\right]\ , 
 \end{equation}
-the sound speed is now 
+the sound speed is now {\color{red} (likely wrong see appendix)}
 \begin{equation}
 \mathcal{C}_s^2= \frac{-b^2F_{bb}-2yF_y-y^2F_{yy}+2byF_{by}}{yF_y-b F_b}\,.
 \end{equation}
-The mixing of the entropy mode with the phonons is given by 
+The mixing of the entropy mode with the phonons is given by  {\color{red} (likely wrong see appendix)}
 \begin{equation}
 \mathcal{M}=   \frac{by F_{by}-y F_y -y^2 F_{yy}}{y F_y-b F_b}\,,
 \end{equation}
